# yHexGame

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile
src/: .gitignore  CMakeLists.txt  main.cpp  mainwidget.cpp  mainwidget.h
src/game/: ygame.cpp  ygame.h
src/lib/: yconstructionobject.cpp  yconstructionobject.h  yhexobject.cpp  yhexobject.h  ylandobject.cpp  ylandobject.h  yobject.cpp  yobject.h  yunitobject.cpp  yunitobject.h
tests/: CMakeLists.txt
tests/guiTest/: CMakeLists.txt  tst_guitest.cpp
